Fixed go-back button style. Added more spacing between projects & contact section.

--- a/src/assets/scss/components/_contact-box.scss
+++ b/src/assets/scss/components/_contact-box.scss
@@ -144,6 +144,7 @@
             left: 0;
             width: 1px;
             height: 100%;
+            opacity: 0.5;
             background: var(--font-dark);
             border-radius: $border-radius-default 0 0 $border-radius-default;
         }
